Exclusão e últimos testes
Exclusão e últimos testes

--- a/crudusuarios/src/main/webapp/usuarioform.html
+++ b/crudusuarios/src/main/webapp/usuarioform.html
@@ -3,7 +3,7 @@
 	<table>
 		<tr>
 			<td>Nome:</td>
-			<td><input type="text" name="nome"/></td>
+			<td><input type="text" name="nomeCompleto"/></td>
 		</tr>
 		<tr>
 			<td>Endereço:</td>
@@ -19,7 +19,7 @@
 		</tr>
 		<tr>
 			<td>CPF:</td>
-			<td><input type="text" name="cpf"/></td>
+			<td><input type="text" name="CPF"/></td>
 		</tr>
 		<tr>
 			<td>Telefone:</td>
